# Open-SMART-PMI

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: ci5001778_si_001.txt
model/: default_model  model_params.csv
src/: experiment.py  main.py  merck.py  molecular_descriptors.py  predict.py  train.py  utilities.py
src/webapp/: about_app.py  app.py  dont_use_parser.py  helper.py  index.py  requirements-dev.txt  requirements.txt
src/webapp/ML_prediction/: predictions.py  requirements.txt
src/webapp/dont_use_documents/: Business Requirement Document for Smart PMI.docx
src/webapp/models/: final_RFfeatures.joblib  final_RFmodel.joblib  molecular_featurizer.py  output.csv  predictions.py
src/webapp/notebooks/: gilead_molecules.ipynb  parser.py  requirements.txt  smartpmi-evaluation.ipynb  smartpmi_RF_model.ipynb  smartpmi_full.ipynb  smartpmi_preprocessing.ipynb
src/webapp/pages/: home.py
src/webapp/sample/: 55691550.sdf  58676448.sdf  71297101.sdf  71445396.sdf
src/webapp/tests/: test_helper.py  test_home.py
